Update footer color

--- a/jekyll-serif-theme-master/_includes/footer.html
+++ b/jekyll-serif-theme-master/_includes/footer.html
@@ -4,7 +4,7 @@
       <div class="col-12">
         <div class="footer-inner">
           <div class="logo-footer">
-            <a href="{{ site.baseurl }}"><img height="{{ site.logo.desktop_height }}" alt="{{ site.title }}" src="{{ site.logo.desktop | relative_url }}" /></a>
+            <a href="{{ site.baseurl }}"><img height="{{ site.logo.footer_height }}" alt="{{ site.title }}" src="{{ site.logo.footer | relative_url }}" /></a>
           </div>
           <ul>
             {% assign footermenu = site.data.menus.footer | sort: 'weight'  %}
