--- a/jekyll-serif-theme-master/_sass/components/_social.scss
+++ b/jekyll-serif-theme-master/_sass/components/_social.scss
@@ -3,6 +3,7 @@
   img {
     width: 20px;
     height: 20px;
+    filter: brightness(0) saturate(100%) invert(64%) sepia(62%) saturate(348%) hue-rotate(6deg) brightness(88%) contrast(87%);
   }
   a {
     padding: 10px;
