--- a/jekyll-serif-theme-master/_sass/components/_footer.scss
+++ b/jekyll-serif-theme-master/_sass/components/_footer.scss
@@ -4,7 +4,7 @@
   padding-bottom: 15px;
   
   img {
-    filter: brightness(0) saturate(100%) invert(96%) sepia(9%) saturate(726%) hue-rotate(341deg) brightness(112%) contrast(94%);
+    // filter: brightness(0) saturate(100%) invert(96%) sepia(9%) saturate(726%) hue-rotate(341deg) brightness(112%) contrast(94%);
   }
   
   .logo-footer {
