--- a/jekyll-serif-theme-master/assets/css/style.scss
+++ b/jekyll-serif-theme-master/assets/css/style.scss
@@ -24,10 +24,10 @@ $font-family-base: "Noto Serif", serif, -apple-system;
 $font-family-heading: "Poppins", sans-serif, -apple-system;
 
 // Footer
-$footer-background-color: $primary;
-$footer-text-color: $white;
-$sub-footer-background-color: darken($primary, 10%);
-$sub-footer-text-color: $white;
+$footer-background-color: $white-offset;
+$footer-text-color: $navy-dark;
+$sub-footer-background-color: darken($white-offset, 5%);
+$sub-footer-text-color: $navy-dark;
 
 // Bootstrap 5.3.2
 
