--- a/jekyll-serif-theme-master/_layouts/myths.html
+++ b/jekyll-serif-theme-master/_layouts/myths.html
@@ -30,11 +30,11 @@ bodyClass: "page-home"
   <div class="myth myth-summary">
         <div class="content myth-content">
           {% for myth in site.myths %}
-          <div class="row mb-12">
-            <div class="col-12 col-md-5 col-lg-5 order-2 order-md-1 position-relative">
+          <div class="row mb-6 m-auto">
+            <div class="col-12 col-md-5 col-lg-4 order-2 order-md-1 position-relative">
               <img alt="{{ myth.title }}"" class="intro-image" src="{{ myth.image | relative_url }}" />
             </div>
-            <div class="col-12 col-md-7 col-lg-7 order-1 order-md-2">
+            <div class="col-12 col-md-7 col-lg-8 order-1 order-md-2">
               <h3 class="myth-category">Myth #{{ myth.weight }}</h3>
               <h2 class="myth-title">
                 <a href="{{ myth.url | relative_url }}">{{ myth.title }}</a>
