--- a/jekyll-serif-theme-master/_layouts/team.html
+++ b/jekyll-serif-theme-master/_layouts/team.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-bodyClass: "page-team"
+bodyClass: "page-teams"
 ---
 
-<div class="container pb-6 pt-6 pt-md-10 pb-md-10">
+<div class="container pb-10 pt-10 pt-md-10 pb-md-10">
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <div class="team team-single">
