--- a/jekyll-serif-theme-master/_sass/components/_content.scss
+++ b/jekyll-serif-theme-master/_sass/components/_content.scss
@@ -26,6 +26,7 @@
     height: auto;
     margin-top: 20px;
     margin-bottom: 20px;
+    border-radius: 8px;
   }
   strong {
     font-weight: bold;
@@ -72,6 +73,13 @@
     margin-top: 30px;
     margin-bottom: 20px;
     color: $primary-light;
+    a {
+      color: $white;
+      text-decoration: none;
+      &:hover {
+        color: darken($white, 10%);
+      }
+    }
   }
   h4 {
     font-family: $font-family-heading;
