--- a/jekyll-serif-theme-master/_sass/pages/_page-individual-treasury.scss
+++ b/jekyll-serif-theme-master/_sass/pages/_page-individual-treasury.scss
@@ -4,9 +4,8 @@
       &:first-of-type {
         font-size: 1.6rem;
         line-height: 1.4;
-        margin-bottom: 40px;
-        font-weight: regular;
-        color: rgb(104, 104, 104);
+        font-weight: 400;
+        color: $primary-light;
       }
     }
   }
