--- a/jekyll-serif-theme-master/_sass/components/_intro.scss
+++ b/jekyll-serif-theme-master/_sass/components/_intro.scss
@@ -11,8 +11,8 @@
   overflow: hidden;
   z-index: -1;
   @include media-breakpoint-up(md) {
-    padding-top: 228px;
-    padding-bottom: 140px;
+    padding-top: 148px;
+    padding-bottom: 60px;
   }
   h1 {
     color: $white;
@@ -20,15 +20,13 @@
     font-weight: 600;
     line-height: 1.2;
     @include media-breakpoint-up(md) {
-      width: 80%;
-      font-size: 48px;
+      font-size: 2.4rem;
     }
     @include media-breakpoint-up(lg) {
-      font-size: 50px;
+      font-size: 2.4rem;
     }
   }
   h2 {
-    width: 80%;
     font-size: 1.2rem;
     line-height: 1.4;
     margin-bottom: 30px;
