Adjust medium view section team

--- a/jekyll-serif-theme-master/_sass/components/_feature.scss
+++ b/jekyll-serif-theme-master/_sass/components/_feature.scss
@@ -3,6 +3,10 @@
   padding: 48px;
   background-color: $navy-dark;
 
+  @include media-breakpoint-up(sm) {
+    padding: 24px;
+  }
+
   h2 {
     color: $white;
     font-size: 32px;
