--- a/jekyll-serif-theme-master/_layouts/home.html
+++ b/jekyll-serif-theme-master/_layouts/home.html
@@ -140,7 +140,7 @@ bodyClass: "page-home"
       <div class="col-12 mb-4">
         <div class="row justify-content-start team">
           {% if team.image %}
-          <div class="col-8 col-md-4 mb-1 m-auto">
+          <div class="col-8 col-md-4 mb-2 mt-2 m-auto">
             <img class="img-fluid" alt="{{ team.title }}" src="{{ team.image | relative_url }}" />
           </div>
           {% endif %}
@@ -163,7 +163,7 @@ bodyClass: "page-home"
           <div class="col-12 col-md-6 mb-1">
             <div class="row justify-content-start service">
               {% if service.image %}
-              <div class="col-8 col-md-4 mb-1 m-auto">
+              <div class="col-8 col-md-4 mb-2 mt-2 m-auto">
                 <img class="img-fluid" alt="{{ service.title }}" src="{{ service.image | relative_url }}" />
               </div>
               {% endif %}
