--- a/jekyll-serif-theme-master/_layouts/individual-treasury.html
+++ b/jekyll-serif-theme-master/_layouts/individual-treasury.html
@@ -111,7 +111,7 @@ bodyClass: "page-home"
           <div class="col-12 mb-4">
             <div class="row justify-content-start team">
               {% if team.image %}
-              <div class="col-8 col-md-4 mb-1 m-auto">
+              <div class="col-8 col-md-4 mb-2 mt-2 m-auto">
                 <img class="img-fluid" alt="{{ team.title }}" src="{{ team.image | relative_url }}" />
               </div>
               {% endif %}
