Adjust image URL home

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,31 +32,31 @@ bodyClass: "page-home"
           <span>...</span>
           <h2>The chaos is here—only smart leaders see the way out</h2>
           <p>Do you feel economy slowdown & decreasing customers demand?</p>
-          <img class="d-none d-lg-block" src="/images/illustrations/company-problem.svg" alt="Business Owner Challenges" />
-          <img class="d-lg-none" src="/images/illustrations/company-problem-mobile.svg" alt="Business Owner Challenges" />
+          <img class="d-none d-lg-block" src="../images/illustrations/company-problem.svg" alt="Business Owner Challenges" />
+          <img class="d-lg-none" src="../images/illustrations/company-problem-mobile.svg" alt="Business Owner Challenges" />
         </div>
       </div>
       <div class="col-12 mb-1">
         <div class="content">
           <p>How about ongoing inflation eating your profit & stealing the future payroll of your people?</p>
-          <img src="/images/illustrations/graph-dollar-gone.svg" alt="Purchasing Power of the Consumer Doller in U.S. City Average Graph" />
+          <img src="../images/illustrations/graph-dollar-gone.svg" alt="Purchasing Power of the Consumer Doller in U.S. City Average Graph" />
         </div>
       </div>
       <div class="col-12 mb-1">
         <div class="content">
           <h3>The bad news? This chaos is global, persistent, and only just beginning.</h3>
           <p>Because the real trouble lies in the bedrock of the world economy: the USA.</p>
-          <img src="/images/illustrations/jp-morgan-statement.svg" alt="JP Morgan CEO Statement The Bond Markets are Gonna Have a Tough Time" />
+          <img src="../images/illustrations/jp-morgan-statement.svg" alt="JP Morgan CEO Statement The Bond Markets are Gonna Have a Tough Time" />
         </div>
       </div>
       <div class="col-12 mb-1">
         <div class="row justify-content-start content">
           <p>The root cause is exponentially increasing USD supply & US government debt. They inherently embedded on how USD is originated since the 70's. Unless it changes, the time bomb will keep ticking, and will explode around 2030's.</p>
           <div class="col-12 col-md-6 mb-1">
-            <img src="/images/illustrations/graph-us-debt.svg" alt="Graph US Debt" />
+            <img src="../images/illustrations/graph-us-debt.svg" alt="Graph US Debt" />
           </div>
           <div class="col-12 col-md-6 mb-1">
-            <img src="/images/illustrations/graph-us-m2.svg" alt="Graph US Dollar Supply" />
+            <img src="../images/illustrations/graph-us-m2.svg" alt="Graph US Dollar Supply" />
           </div>
           <p>We need a new global money, way before 2040. But other countries' money shared the exact same issue with USD (e.g. CNY, IDR), while gold & silver are no longer practical to replace USD as the world money.</p>
           <p>The economic collapse isn't coming—it's already happening, and it's only getting worse. Most of your wealth—your years of hard work—is evaporating at accelerating rate. The question is: When everyone is in panic, can your company and your family survive?</p>
@@ -75,10 +75,10 @@ bodyClass: "page-home"
           <h2>Luckily, in the midst of chaos, there is a ladder: bitcoin</h2>
           <p>The unstoppable exponential increase of dollar/rupiah/yuan supply is actually a big opportunity.<br>But only for smart leaders who's humble enough to put down her/his ego & study bitcoin.</p>
           <div class="col-12 col-md-6 mb-1">
-            <img src="/images/illustrations/bitcoin-statement-1.svg" alt="Elon Musk Statement About Bitcoin" />
+            <img src="../images/illustrations/bitcoin-statement-1.svg" alt="Elon Musk Statement About Bitcoin" />
           </div>
           <div class="col-12 col-md-6 mb-1">
-            <img src="/images/illustrations/bitcoin-statement-2.svg" alt="Jack Dorsey & Larry Fink Statement About Bitcoin" />
+            <img src="../images/illustrations/bitcoin-statement-2.svg" alt="Jack Dorsey & Larry Fink Statement About Bitcoin" />
           </div>
         </div>
       </div>
@@ -86,24 +86,24 @@ bodyClass: "page-home"
         <div class="row justify-content-start content">
           <p>When the US itself -- as the source of this chaos -- is now climbing the ladder of solution a smart leader understands that bitcoin is going to be popular.</p>
           <div class="col-12 col-md-6 mb-1">
-            <img src="/images/illustrations/bitcoin-statement-3.svg" alt="Donald Trump Statement About Bitcoin" />
+            <img src="../images/illustrations/bitcoin-statement-3.svg" alt="Donald Trump Statement About Bitcoin" />
           </div>
           <div class="col-12 col-md-6 mb-1">
-            <img src="/images/illustrations/bitcoin-statement-4.svg" alt="US Bitcoin Acceptance" />
+            <img src="../images/illustrations/bitcoin-statement-4.svg" alt="US Bitcoin Acceptance" />
           </div>
         </div>
       </div>
       <div class="col-12 mb-1">
         <div class="content">
           <p>Because 16 years of price history won't lie. If you save as little as $1,000 monthly profit in bitcoin since Tesla announced its bitcoin treasury (Feb '21), that tiny profit will be $151,618. A 3x growth! Way more than gold (1.6x) & S&P500 (1.3x).</p>
-          <img src="/images/illustrations/graph-bitcoin-performance.svg" alt="Bitcoin Performance compare to Gold and S&P 500" />
+          <img src="../images/illustrations/graph-bitcoin-performance.svg" alt="Bitcoin Performance compare to Gold and S&P 500" />
         </div>
       </div>
       <div class="col-12 mb-1">
         <div class="content">
           <h3>Why it does perform so well?</h3>
           <p>Because bitcoin is simply the opposite of dollars: It's limited in supply, with immutable monetary policy, originated from energy competition instead of debt. The problems of dollars give bitcoin value.</p>
-          <img src="/images/illustrations/graph-bitcoin-inflation.svg" alt="Bitcoin Inflation vs Time" />
+          <img src="../images/illustrations/graph-bitcoin-inflation.svg" alt="Bitcoin Inflation vs Time" />
         </div>
       </div>
       <div class="col-12 mb-1">
@@ -116,8 +116,8 @@ bodyClass: "page-home"
           </p>
           <p>We’re born into a world where we assume only governments can issue money, even though 5,000 years of human history say otherwise.</p>
           <p>This is why most of your competitors won’t get it.</p>
-          <img class="d-none d-lg-block" src="/images/illustrations/elon_musk_questioning.svg" alt="Business Owner Challenges" />
-          <img class="d-lg-none" src="/images/illustrations/elon_musk_questioning-mobile.svg" alt="Business Owner Challenges" />
+          <img class="d-none d-lg-block" src="../images/illustrations/elon_musk_questioning.svg" alt="Business Owner Challenges" />
+          <img class="d-lg-none" src="../images/illustrations/elon_musk_questioning-mobile.svg" alt="Business Owner Challenges" />
         </div>
       </div>
     </div>
@@ -131,7 +131,7 @@ bodyClass: "page-home"
         <div class="content">
           <span>...</span>
           <h2>Fate brought you to us.<br>We guide the smart leaders to climb the way out.</h2>
-          <img src="/images/logo/logo.svg" alt="Logo Bitcoinstitution" />
+          <img src="../images/logo/logo.svg" alt="Logo Bitcoinstitution" />
           <p>We helps smart leaders implement bitcoin treasury. We've been using bitcoin since 2013 and accumulating it since 2017. We are a team of ex banker, educator, and programmer, ready to guide you climbing the ladder, to a thriving future.</p>
         </div>
       </div>
@@ -210,7 +210,7 @@ bodyClass: "page-home"
           <h2>The roadmap you need to survive the 2030 crisis </h2>
           <h3>Bitcoin Treasury Implementation Process</h3>
           <div class="col-12 col-md-4 mb-1">
-            <img src="/images/how/1.svg" alt="Elon Musk Statement About Bitcoin" />
+            <img src="../images/how/1.svg" alt="Elon Musk Statement About Bitcoin" />
             <h4>Leadership Alignment</h4>
             <ul>
               <li>Conduct executive Bitcoin education sessions</li>
@@ -220,7 +220,7 @@ bodyClass: "page-home"
             </ul>
           </div>
           <div class="col-12 col-md-4 mb-1">
-            <img src="/images/how/2.svg" alt="Jack Dorsey & Larry Fink Statement About Bitcoin" />
+            <img src="../images/how/2.svg" alt="Jack Dorsey & Larry Fink Statement About Bitcoin" />
             <h4>Infrastructure Deployment</h4>
             <ul>
               <li>Implement secure custody solutions (multisig, cold storage)</li>
@@ -230,7 +230,7 @@ bodyClass: "page-home"
             </ul>
           </div>
           <div class="col-12 col-md-4 mb-1">
-            <img src="/images/how/3.svg" alt="Jack Dorsey & Larry Fink Statement About Bitcoin" />
+            <img src="../images/how/3.svg" alt="Jack Dorsey & Larry Fink Statement About Bitcoin" />
             <h4>Strategic Activation (Optional)</h4>
             <ul>
               <li>Optimize liquidity management</li>
