trying site.baseurl fix

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,8 +32,8 @@ bodyClass: "page-home"
           <span>...</span>
           <h2>The chaos is here—only smart leaders see the way out</h2>
           <p>Do you feel economy slowdown & decreasing customers demand?</p>
-            <img class="d-none d-lg-block" src="../images/illustrations/company-problem.svg" alt="Illustration showing business owners facing challenges such as declining demand, economic slowdown, and uncertainty. The image conveys concern and urgency, highlighting the difficulties leaders face in today's economy." />
-            <img class="d-lg-none" src="../images/illustrations/company-problem-mobile.svg" alt="Illustration showing business owners facing challenges such as declining demand, economic slowdown, and uncertainty. The image conveys concern and urgency, highlighting the difficulties leaders face in today's economy." />
+            <img class="d-none d-lg-block" src="{{ site.baseurl }}/images/illustrations/company-problem.svg" alt="Illustration showing business owners facing challenges such as declining demand, economic slowdown, and uncertainty. The image conveys concern and urgency, highlighting the difficulties leaders face in today's economy." />
+            <img class="d-lg-none" src="{{ site.baseurl }}/images/illustrations/company-problem-mobile.svg" alt="Illustration showing business owners facing challenges such as declining demand, economic slowdown, and uncertainty. The image conveys concern and urgency, highlighting the difficulties leaders face in today's economy." />
         </div>
       </div>
       <div class="col-12 mb-1">
