implement the updates

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,24 +39,24 @@ bodyClass: "page-home"
       <div class="col-12 mb-1">
         <div class="content">
           <p>How about ongoing inflation eating your profit & stealing the future payroll of your people?</p>
-          <img src="../images/illustrations/graph-dollar-gone.svg" alt="Line graph showing the purchasing power of the US dollar in urban areas steadily declining from 1913 to 2024. The graph line slopes downward, emphasizing a dramatic loss in value over time. Text in the image reads Purchasing Power of the Consumer Dollar in US City Average. The background is minimal, highlighting the seriousness and urgency of the decline." />
+          <img src="{{ site.baseurl }}/images/illustrations/graph-dollar-gone.svg" alt="Line graph showing the purchasing power of the US dollar in urban areas steadily declining from 1913 to 2024. The graph line slopes downward, emphasizing a dramatic loss in value over time. Text in the image reads Purchasing Power of the Consumer Dollar in US City Average. The background is minimal, highlighting the seriousness and urgency of the decline." />
         </div>
       </div>
       <div class="col-12 mb-1">
         <div class="content">
           <h3>The bad news? This chaos is global, persistent, and only just beginning.</h3>
           <p>Because the real trouble lies in the bedrock of the world economy: the USA.</p>
-          <img src="../images/illustrations/jp-morgan-statement.svg" alt="Jamie Dimon, CEO of JP Morgan, stands with a serious expression in a financial setting, possibly an office or conference room. The background includes subtle financial motifs, conveying a sense of urgency and concern. Text in the image reads The Bond Markets are Gonna Have a Tough Time. The overall tone is cautionary and highlights challenges in the financial markets." />
+          <img src="{{ site.baseurl }}/images/illustrations/jp-morgan-statement.svg" alt="Jamie Dimon, CEO of JP Morgan, stands with a serious expression in a financial setting, possibly an office or conference room. The background includes subtle financial motifs, conveying a sense of urgency and concern. Text in the image reads The Bond Markets are Gonna Have a Tough Time. The overall tone is cautionary and highlights challenges in the financial markets." />
         </div>
       </div>
       <div class="col-12 mb-1">
         <div class="row justify-content-start content">
           <p>The root cause is exponentially increasing USD supply & US government debt. They inherently embedded on how USD is originated since the 70's. Unless it changes, the time bomb will keep ticking, and will explode around 2030's.</p>
           <div class="col-12 col-md-6 mb-1">
-            <img src="../images/illustrations/graph-us-debt.svg" alt="Line graph showing the rapid increase of US government debt from 1970 to 2024. The graph line rises sharply, especially after 2008 and again after 2020, highlighting exponential growth. The x-axis is labeled Years and the y-axis is labeled US Government Debt. Text in the image reads US Government Debt 1970-2024. The background is clean and minimal, emphasizing the seriousness and urgency of the debt increase." />
+            <img src="{{ site.baseurl }}/images/illustrations/graph-us-debt.svg" alt="Line graph showing the rapid increase of US government debt from 1970 to 2024. The graph line rises sharply, especially after 2008 and again after 2020, highlighting exponential growth. The x-axis is labeled Years and the y-axis is labeled US Government Debt. Text in the image reads US Government Debt 1970-2024. The background is clean and minimal, emphasizing the seriousness and urgency of the debt increase." />
           </div>
           <div class="col-12 col-md-6 mb-1">
-            <img src="../images/illustrations/graph-us-m2.svg" alt="Line graph showing the exponential increase of US dollar supply labeled as M2 from 1970 to 2024. The graph line rises sharply after 2008 and again after 2020, highlighting rapid monetary expansion. The x-axis is labeled Years and the y-axis is labeled US Dollar Supply M2. Text in the image reads US Dollar Supply M2 1970-2024. The background is clean and minimal, emphasizing the dramatic growth and conveying a sense of urgency and concern." />
+            <img src="{{ site.baseurl }}/images/illustrations/graph-us-m2.svg" alt="Line graph showing the exponential increase of US dollar supply labeled as M2 from 1970 to 2024. The graph line rises sharply after 2008 and again after 2020, highlighting rapid monetary expansion. The x-axis is labeled Years and the y-axis is labeled US Dollar Supply M2. Text in the image reads US Dollar Supply M2 1970-2024. The background is clean and minimal, emphasizing the dramatic growth and conveying a sense of urgency and concern." />
           </div>
           <p>We need a new global money, way before 2040. But other countries' money shared the exact same issue with USD (e.g. CNY, IDR), while gold & silver are no longer practical to replace USD as the world money.</p>
           <p>The economic collapse isn't coming—it's already happening, and it's only getting worse. Most of your wealth—your years of hard work—is evaporating at accelerating rate. The question is: When everyone is in panic, can your company and your family survive?</p>
@@ -75,10 +75,10 @@ bodyClass: "page-home"
           <h2>Luckily, in the midst of chaos, there is a ladder: bitcoin</h2>
           <p>The unstoppable exponential increase of dollar/rupiah/yuan supply is actually a big opportunity.<br>But only for smart leaders who's humble enough to put down her/his ego & study bitcoin.</p>
           <div class="col-12 col-md-6 mb-1">
-            <img src="../images/illustrations/bitcoin-statement-1.svg" alt="Elon Musk stands confidently with a thoughtful expression, holding a Bitcoin symbol. The background features digital and futuristic elements suggesting innovation and technology. Text in the image reads Bitcoin is a technological tour de force attributed to Elon Musk. The overall tone is optimistic and forward-looking." />
+            <img src="{{ site.baseurl }}/images/illustrations/bitcoin-statement-1.svg" alt="Elon Musk stands confidently with a thoughtful expression, holding a Bitcoin symbol. The background features digital and futuristic elements suggesting innovation and technology. Text in the image reads Bitcoin is a technological tour de force attributed to Elon Musk. The overall tone is optimistic and forward-looking." />
           </div>
           <div class="col-12 col-md-6 mb-1">
-            <img src="../images/illustrations/bitcoin-statement-2.svg" alt="Jack Dorsey and Larry Fink stand side by side with confident expressions. Jack Dorsey is associated with the text Bitcoin will be the native currency of the internet and Larry Fink with the text Bitcoin is an international asset. The background features digital and financial motifs, suggesting innovation and optimism about the future of Bitcoin. The overall tone is forward-looking and positive." />
+            <img src="{{ site.baseurl }}/images/illustrations/bitcoin-statement-2.svg" alt="Jack Dorsey and Larry Fink stand side by side with confident expressions. Jack Dorsey is associated with the text Bitcoin will be the native currency of the internet and Larry Fink with the text Bitcoin is an international asset. The background features digital and financial motifs, suggesting innovation and optimism about the future of Bitcoin. The overall tone is forward-looking and positive." />
           </div>
         </div>
       </div>
@@ -86,24 +86,24 @@ bodyClass: "page-home"
         <div class="row justify-content-start content">
           <p>When the US itself -- as the source of this chaos -- is now climbing the ladder of solution a smart leader understands that bitcoin is going to be popular.</p>
           <div class="col-12 col-md-6 mb-1">
-            <img src="../images/illustrations/bitcoin-statement-3.svg" alt="Donald Trump stands confidently with an American flag in the background and a large Bitcoin symbol beside him. The image includes the text Bitcoin is the future whether you like it or not attributed to Donald Trump. The environment is patriotic and bold, conveying a sense of assertiveness and inevitability about Bitcoin's role in the future." />
+            <img src="{{ site.baseurl }}/images/illustrations/bitcoin-statement-3.svg" alt="Donald Trump stands confidently with an American flag in the background and a large Bitcoin symbol beside him. The image includes the text Bitcoin is the future whether you like it or not attributed to Donald Trump. The environment is patriotic and bold, conveying a sense of assertiveness and inevitability about Bitcoin's role in the future." />
           </div>
           <div class="col-12 col-md-6 mb-1">
-            <img src="../images/illustrations/bitcoin-statement-4.svg" alt="US flag and Bitcoin symbol together with a quote from Robert F Kennedy Jr stating Bitcoin is an exercise in democracy not finance. The background features patriotic colors and a hopeful tone suggesting growing acceptance of Bitcoin in the United States." />
+            <img src="{{ site.baseurl }}/images/illustrations/bitcoin-statement-4.svg" alt="US flag and Bitcoin symbol together with a quote from Robert F Kennedy Jr stating Bitcoin is an exercise in democracy not finance. The background features patriotic colors and a hopeful tone suggesting growing acceptance of Bitcoin in the United States." />
           </div>
         </div>
       </div>
       <div class="col-12 mb-1">
         <div class="content">
           <p>Because 16 years of price history won't lie. If you save as little as $1,000 monthly profit in bitcoin since Tesla announced its bitcoin treasury (Feb '21), that tiny profit will be $151,618. A 3x growth! Way more than gold (1.6x) & S&P500 (1.3x).</p>
-          <img src="../images/illustrations/graph-bitcoin-performance.svg" alt="Line graph comparing the performance of Bitcoin, Gold, and S&P 500 from 2011 to 2024. Bitcoin shows a steep upward trend, significantly outperforming both Gold and S&P 500, which have modest growth. The graph includes a legend for each asset and labels for key years. Text in the image reads Bitcoin 3x, Gold 1.6x, S&P 500 1.3x, highlighting the growth multipliers since February 2021. The background is clean and minimal, emphasizing the dramatic difference in performance. The tone is optimistic and highlights Bitcoin's strong growth relative to traditional assets." />
+          <img src="{{ site.baseurl }}/images/illustrations/graph-bitcoin-performance.svg" alt="Line graph comparing the performance of Bitcoin, Gold, and S&P 500 from 2011 to 2024. Bitcoin shows a steep upward trend, significantly outperforming both Gold and S&P 500, which have modest growth. The graph includes a legend for each asset and labels for key years. Text in the image reads Bitcoin 3x, Gold 1.6x, S&P 500 1.3x, highlighting the growth multipliers since February 2021. The background is clean and minimal, emphasizing the dramatic difference in performance. The tone is optimistic and highlights Bitcoin's strong growth relative to traditional assets." />
         </div>
       </div>
       <div class="col-12 mb-1">
         <div class="content">
           <h3>Why it does perform so well?</h3>
           <p>Because bitcoin is simply the opposite of dollars: It's limited in supply, with immutable monetary policy, originated from energy competition instead of debt. The problems of dollars give bitcoin value.</p>
-          <img src="../images/illustrations/graph-bitcoin-inflation.svg" alt="Line graph showing Bitcoin inflation rate decreasing sharply over time, approaching near zero by 2140. The x-axis is labeled Years and the y-axis is labeled Inflation Rate. The graph includes a highlighted point at 2140 with the annotation Bitcoin supply reaches 21 million. The background is clean and minimal, emphasizing the steady decline and scarcity of Bitcoin. The tone is informative and emphasizes predictability and certainty." />
+          <img src="{{ site.baseurl }}/images/illustrations/graph-bitcoin-inflation.svg" alt="Line graph showing Bitcoin inflation rate decreasing sharply over time, approaching near zero by 2140. The x-axis is labeled Years and the y-axis is labeled Inflation Rate. The graph includes a highlighted point at 2140 with the annotation Bitcoin supply reaches 21 million. The background is clean and minimal, emphasizing the steady decline and scarcity of Bitcoin. The tone is informative and emphasizes predictability and certainty." />
         </div>
       </div>
       <div class="col-12 mb-1">
@@ -116,8 +116,8 @@ bodyClass: "page-home"
           </p>
           <p>We’re born into a world where we assume only governments can issue money, even though 5,000 years of human history say otherwise.</p>
           <p>This is why most of your competitors won’t get it.</p>
-            <img class="d-none d-lg-block" src="../images/illustrations/elon_musk_questioning.svg" alt="Elon Musk looking thoughtful and questioning, representing curiosity and skepticism about Bitcoin and new technologies" />
-          <img class="d-lg-none" src="../images/illustrations/elon_musk_questioning-mobile.svg" alt="Musk looking thoughtful and questioning, representing curiosity and skepticism about Bitcoin and new technologies" />
+            <img class="d-none d-lg-block" src="{{ site.baseurl }}/images/illustrations/elon_musk_questioning.svg" alt="Elon Musk looking thoughtful and questioning, representing curiosity and skepticism about Bitcoin and new technologies" />
+          <img class="d-lg-none" src="{{ site.baseurl }}/images/illustrations/elon_musk_questioning-mobile.svg" alt="Musk looking thoughtful and questioning, representing curiosity and skepticism about Bitcoin and new technologies" />
         </div>
       </div>
     </div>
@@ -131,7 +131,7 @@ bodyClass: "page-home"
         <div class="content">
           <span>...</span>
           <h2>Fate brought you to us.<br>We guide the smart leaders to climb the way out.</h2>
-            <img src="../images/logo/logo.svg" alt="Bitcoinstitution logo featuring a stylized gold and white emblem resembling a shield or badge with circular and geometric elements. The logo is accompanied by the text Bitcoinstitution in a modern white font on a dark background, conveying a sense of trust, professionalism, and innovation." />
+            <img src="{{ site.baseurl }}/images/logo/logo.svg" alt="Bitcoinstitution logo featuring a stylized gold and white emblem resembling a shield or badge with circular and geometric elements. The logo is accompanied by the text Bitcoinstitution in a modern white font on a dark background, conveying a sense of trust, professionalism, and innovation." />
           <p>We helps smart leaders implement bitcoin treasury. We've been using bitcoin since 2013 and accumulating it since 2017. We are a team of ex banker, educator, and programmer, ready to guide you climbing the ladder, to a thriving future.</p>
         </div>
       </div>
@@ -210,7 +210,7 @@ bodyClass: "page-home"
           <h2>The roadmap you need to survive the 2030 crisis </h2>
           <h3>Bitcoin Treasury Implementation Process</h3>
           <div class="col-12 col-md-4 mb-1">
-            <img src="../images/how/1.svg" alt="Three business leaders standing together in a modern office setting collaborating and discussing strategy with a confident and optimistic atmosphere. The background features abstract elements suggesting leadership and alignment. Text in image reads Leadership Alignment." />
+            <img src="{{ site.baseurl }}/images/how/1.svg" alt="Three business leaders standing together in a modern office setting collaborating and discussing strategy with a confident and optimistic atmosphere. The background features abstract elements suggesting leadership and alignment. Text in image reads Leadership Alignment." />
             <h4>Leadership Alignment</h4>
             <ul>
               <li>Conduct executive Bitcoin education sessions</li>
@@ -220,7 +220,7 @@ bodyClass: "page-home"
             </ul>
           </div>
           <div class="col-12 col-md-4 mb-1">
-            <img src="../images/how/2.svg" alt="Server racks and digital security icons representing infrastructure deployment for Bitcoin treasury in a modern, secure, and professional environment, conveying a sense of reliability and technological advancement" />
+            <img src="{{ site.baseurl }}/images/how/2.svg" alt="Server racks and digital security icons representing infrastructure deployment for Bitcoin treasury in a modern, secure, and professional environment, conveying a sense of reliability and technological advancement" />
             <h4>Infrastructure Deployment</h4>
             <ul>
               <li>Implement secure custody solutions (multisig, cold storage)</li>
@@ -230,7 +230,7 @@ bodyClass: "page-home"
             </ul>
           </div>
           <div class="col-12 col-md-4 mb-1">
-            <img src="../images/how/3.svg" alt="Three upward arrows representing strategic activation and business growth, set against a clean background with a positive and motivating tone" />
+            <img src="{{ site.baseurl }}/images/how/3.svg" alt="Three upward arrows representing strategic activation and business growth, set against a clean background with a positive and motivating tone" />
             <h4>Strategic Activation (Optional)</h4>
             <ul>
               <li>Optimize liquidity management</li>
