--- a/_layouts/individual-treasury.html
+++ b/_layouts/individual-treasury.html
@@ -60,7 +60,7 @@ bodyClass: "page-home"
                 <div class="col-12 col-md-4 mb-1">
                     <div class="row justify-content-start service">
                       <div class="col-8 col-md-4 mb-1 m-auto">
-                        <img class="img-fluid" alt="Hands-on Experience" src="../images/illustrations/individual-benefit-1.svg" />
+                        <img class="img-fluid" alt="Hands-on Experience" src="{{ site.baseurl }}/images/illustrations/individual-benefit-1.svg" />
                       </div>
                       <div class="col-12 col-md-8 mb-1">
                         <p class="service-excerpt">Understanding the real bitcoin through hands-on experience.</p>
@@ -70,7 +70,7 @@ bodyClass: "page-home"
                   <div class="col-12 col-md-4 mb-1">
                     <div class="row justify-content-start service">
                       <div class="col-8 col-md-4 mb-1 m-auto">
-                        <img class="img-fluid" alt="Best Practice" src="../images/illustrations/individual-benefit-2.svg" />
+                        <img class="img-fluid" alt="Best Practice" src="{{ site.baseurl }}/images/illustrations/individual-benefit-2.svg" />
                       </div>
                       <div class="col-12 col-md-8 mb-1">
                         <p class="service-excerpt">The best practice in buying, storing, & selling bitcoin.</p>
@@ -80,7 +80,7 @@ bodyClass: "page-home"
                   <div class="col-12 col-md-4 mb-1">
                     <div class="row justify-content-start service">
                       <div class="col-8 col-md-4 mb-1 m-auto">
-                        <img class="img-fluid" alt="Accounting & Tax Disclosure" src="../images/illustrations/individual-benefit-3.svg" />
+                        <img class="img-fluid" alt="Accounting & Tax Disclosure" src="{{ site.baseurl }}/images/illustrations/individual-benefit-3.svg" />
                       </div>
                       <div class="col-12 col-md-8 mb-1">
                         <p class="service-excerpt">Accounting & tax disclosure (SPT Orang Pribadi).</p>
